Updated ReadMe to include instructions for Windows users.